# ld-mcp

./: .gitignore  README.md  mcp-config.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: cache.py  config.py  fetch.py  index.json  index.yaml  main.py  models.py  utils.py
src/ld_mcp/: __init__.py  config.py  fetch.py  index.yaml  models.py  server.py
src/ld_mcp/parsers/: __init__.py  content.py  namespace.py  toc.py
src/parsers/: __init__.py  content.py  namespace.py  toc.py
tests/: test_index.py  test_specs.py  validate_all.py
